Version 2.03.14 - 
==================================
  Fix memleak in mpath filter.
  Support newer location for VDO statistics.
  Add support for VDO async-unsage write policy.
  Improve lvm_import_vdo script.
  Support VDO LV with lvcreate -ky.
  Fix lvconvert for VDO LV bigger then 2T.
  Create VDO LVs automatically without zeroing.
  Rename vdoimport to lvm_import_vdo.

Version 2.03.13 - 11th August 2021
==================================
  Changes in udev support:
  - obtain_device_list_from_udev defaults to 0.
  - see devices/external_device_info_source,
    devices/obtain_device_list_from_udev, and devices/multipath_wwids_file help
    in lvm.conf
  Fix devices file handling of loop with deleted backing file.
  Fix devices file handling of scsi_debug WWIDs.
  Fix many static analysis issues.
  Support --poolmetadataspare with vgsplit and vgmerge.
  Fix detection of active components of external origin volume.
  Add vdoimport tool to support conversion of VDO volumes.
  Support configurable allocation/vdo_pool_header_size.
  Fix handling of lvconvert --type vdo-pool --virtualsize.
  Simplified handling of archive() and backup() internal calls.
  Add 'idm' locking type for IDM lock manager.
  Fix load of kvdo target when it is not present in memory (2.03.12).

Version 2.03.12 - 07th May 2021
===============================
  Allow attaching cache to thin data volume.
  Fix memleak when generating list of outdated pvs.
  Better hyphenation usage in man pages.
  Replace use of deprecated security_context_t with char*.
  Configure supports AIO_LIBS and AIO_CFLAGS.
  Improve build process for static builds.
  New --setautoactivation option to modify LV or VG auto activation.
  New metadata based autoactivation property for LVs and VGs.
  Improve signal handling with lvmpolld.
  Signal handler can interrupt command also for SIGTERM.
  Lvreduce --yes support.
  Add configure option --with/out-symvers for non-glibc builds.