@@ -1,5 +1,6 @@
 Version 2.03.14 - 
 ==================================
+  Filter out unsupported MQ/SMQ cache policy setting.
   Fix memleak in mpath filter.
   Support newer location for VDO statistics.
   Add support for VDO async-unsage write policy.
